--- a/index.html
+++ b/index.html
@@ -45,28 +45,49 @@
 </header>
 </div>
   <!----------------->
-const myCarousel = document.getElementById('myCarousel')
-
-myCarousel.addEventListener('slide.bs.carousel', event => {
-  direction:"right"
-  relatedTarget:
-})
-
+   <div id="carouselExample" class="carousel slide" data-bs-touch="false" data-bs-theme="dark">
+     <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertificate">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+   </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+   </div>
 
   <!----------------->
   <main>
- <div id="mycarousel" class="carousel slide" data-ride="carousel" data-bs-touch="true"> 
-   <div class="carousel-inner">
-     <div class="carousel-item active">
-       <img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
-    </div>
-      <div class="carousel-item">
-<img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertificate"> 
-      </div>
-<div class="carousel-item">
-<img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
-      </div>
-  </div>
+ <div id="mycarousel" class="carousel slide" data-bs-touch="true"> 
+   
     <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 <span class="sr-only">Previous</span>
