--- a/index.html
+++ b/index.html
@@ -53,22 +53,51 @@
     <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
+    <!---------carousel slide 1-------->
     <div class="carousel-item active">
-      <img src="https://sem2093.github.io/portfolio/certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg" class="d-block w-100" alt="csscertificate">
+         <div class="form">
+    <form class="username" id="username">
+  <div class="col-md-4 position-relative">
+    <label for="username" class="form-label">GitHub Username</label>
+    <div class="input-group has-validation">
+      <span class="input-group-text" id="usernamePrepend">@</span>
+      <input type="text" class="form-control" id="username" >
+      </div>
+    </div>
+</form>
+      <button class="btn btn-primary" id="liveAlertBtn">Submit</button>
+    </div>
+      <div id="liveAlertPlaceholder"></div>
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
+    <!---------carousel slide 2 ----------->
     <div class="carousel-item">
-      <img src="https://sem2093.github.io/portfolio/certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg" class="d-block w-100" alt="htmlcertificate">
+      <nav class="navbar bg-body-tertiary" id="search">
+  <div class="container-fluid">
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</nav> 
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
+    <!---------carousel slide 3---------->
     <div class="carousel-item">
-      <img src="https://sem2093.github.io/portfolio/certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg" class="d-block w-100" alt="pythoncertificate">
+      <div class="githubbutton">
+  <button type="button" class="btn btn-outline-secondary">Facebook<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+</svg></button>
+      <button type="button" class="btn btn-outline-secondary">Github<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+</svg></button>
+    </div>  
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -84,38 +113,7 @@
     <span class="visually-hidden">Next</span>
   </button>
    </div>    
-<!-------github username request---------->
-      <div class="form">
-    <form class="username" id="username">
-  <div class="col-md-4 position-relative">
-    <label for="username" class="form-label">GitHub Username</label>
-    <div class="input-group has-validation">
-      <span class="input-group-text" id="usernamePrepend">@</span>
-      <input type="text" class="form-control" id="username" >
-      </div>
-    </div>
-</form>
-      <button class="btn btn-primary" id="liveAlertBtn">Submit</button>
-    </div>
-      <div id="liveAlertPlaceholder"></div>
-      <!---------Search bar-------->
-      <nav class="navbar bg-body-tertiary" id="search">
-  <div class="container-fluid">
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </div>
-</nav> 
-      <!---------SVG ICONS-------->
-    <div class="githubbutton">
-  <button type="button" class="btn btn-outline-secondary">Facebook<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-</svg></button>
-      <button type="button" class="btn btn-outline-secondary">Github<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-  <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-</svg></button>
-    </div>  
+<!-------end of carousel---------->
   <!-------about---------->
     <div id="aboutcon">
       <p class="about" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
