--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="form">
       <nav class="navbar bg-body-tertiary" id="search">
   <div class="container-fluid">
-    <form class="d-flex" role="search">
+    <form class="d-flex search" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
