--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <!---------carousel slide 2 ----------->
     <div class="carousel-item">
       <div class="form">
-      <nav class="navbar bg-body-tertiary" id="search">
+      <nav class="navbar bg-body-tertiary search" id="search">
   <div class="container-fluid">
-    <form class="d-flex search" role="search">
+    <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
