--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://sem2093.github.io/portfolio/css/styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
-<body>
+<body class="bg-secondary">
  
   <div>
   <header>
@@ -93,11 +93,11 @@
     </div>
   </div>
    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" data-bs-theme="dark">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="carousel-control-prev-icon"></span>
     <span class="visually-hidden">Previous</span>
    </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next" data-bs-theme="dark">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="carousel-control-next-icon"></span>
     <span class="visually-hidden">Next</span>
   </button>
    </div>    
