--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#aboutcon">About</a>
+          <a class="nav-link" href="#aboutcon">
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#certcon">Certifications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#concon">Contact Me</a>
+          <a class="nav-link" href="#concon">
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -98,7 +98,12 @@
 </svg></button>
     </div>  
     </div>
-  </div>
+  <!---------carousel slide 4---------->
+<div class="carousel-item">
+
+
+</div>
+    <!---------carousel controls---------->
    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" data-bs-theme="dark">
     <span class="carousel-control-prev-icon"></span>
     <span class="visually-hidden">Previous</span>
@@ -109,10 +114,7 @@
   </button>
    </div>    
 <!-------end of carousel---------->
-  <!-------about---------->
-    <div id="aboutcon">
-      <p class="about" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
-    </div>
+  
   <!-------------certificates-------------->
  <div id="certcon">
   <img class="cert" src="certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg">
@@ -125,11 +127,7 @@
   <img class="certtall" src="certificates/BB86BC3B-486A-4C44-8C23-5ECEB2F69001.jpeg">
   <img class="certtall" src="certificates/DAF56264-87B6-4992-B6D2-3A7E2642CA11.jpeg">
   </div>
-  <!--------contact--------->
-  <div id="concon">
-  <p>Email: sem2093@gmail.com</p>
-      <p>Phone: 937-474-9664</p>
-  </div>
+  
     
   </main>
   
