--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active indicator" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1"  class="indicator" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" class="indicator" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" class="indicator" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="4" class="indicator" aria-label="Slide 5"></button> 
   </div>
   <div class="carousel-inner">
     <!---------carousel slide 1-------->
@@ -100,6 +102,26 @@
     </div>
   <!---------carousel slide 4---------->
 <div class="carousel-item">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+  <div id="certcon">
+  <img class="cert" src="certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg">
+  <img class="cert" src="certificates/25CC7C93-330E-4614-80EC-634FD932EC70.jpeg">
+  <img class="cert" src="certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg">
+  <img class="cert" src="certificates/9B5F6441-DF92-4EBB-814B-9E586683F37D.jpeg">
+  <img class="cert" src="certificates/EB15E413-A57E-4961-821A-B707DFC09E1C.jpeg">
+  <img class="cert" src="certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg">
+  <img class="certtall" src="certificates/1F8A93B3-1576-4439-9BB4-E355A1BCBE09.jpeg">
+  <img class="certtall" src="certificates/BB86BC3B-486A-4C44-8C23-5ECEB2F69001.jpeg">
+  <img class="certtall" src="certificates/DAF56264-87B6-4992-B6D2-3A7E2642CA11.jpeg">
+  </div>
+  </div>
+</div>
+     <!---------carousel slide 5---------->
+<div class="carousel-item">
+  
+ https://sem2093.github.io/apiproject/
+  https://sem2093.github.io/react/
+ https://github.com/sem2093/HarvardCS50/blob/main/README.md
 
 
 </div>
@@ -116,17 +138,7 @@
 <!-------end of carousel---------->
   
   <!-------------certificates-------------->
- <div id="certcon">
-  <img class="cert" src="certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg">
-  <img class="cert" src="certificates/25CC7C93-330E-4614-80EC-634FD932EC70.jpeg">
-  <img class="cert" src="certificates/25ED913D-1804-49D4-8D26-0D62C38CCE57.jpeg">
-  <img class="cert" src="certificates/9B5F6441-DF92-4EBB-814B-9E586683F37D.jpeg">
-  <img class="cert" src="certificates/EB15E413-A57E-4961-821A-B707DFC09E1C.jpeg">
-  <img class="cert" src="certificates/FF3C612C-BF14-40A2-AB04-9C60CE8D8FDA.jpeg">
-  <img class="certtall" src="certificates/1F8A93B3-1576-4439-9BB4-E355A1BCBE09.jpeg">
-  <img class="certtall" src="certificates/BB86BC3B-486A-4C44-8C23-5ECEB2F69001.jpeg">
-  <img class="certtall" src="certificates/DAF56264-87B6-4992-B6D2-3A7E2642CA11.jpeg">
-  </div>
+ 
   
     
   </main>
