--- a/index.html
+++ b/index.html
@@ -11,37 +11,7 @@
  
   <div>
   <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="https://sem2093.github.io/portfolio/">Steven Millers Portfolio</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#aboutcon">
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#certcon">Certifications</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#concon">
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Projects
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://sem2093.github.io/apiproject/">API Projects</a></li>
-            <li><a class="dropdown-item" href="https://sem2093.github.io/react/">React Projects</a></li>
-            <li><a class="dropdown-item" href="https://github.com/sem2093/HarvardCS50/blob/main/README.md">Harvard Python Course</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  
 </header>
 </div>
   <!----------------->
@@ -118,12 +88,11 @@
 </div>
      <!---------carousel slide 5---------->
 <div class="carousel-item">
-  
- https://sem2093.github.io/apiproject/
-  https://sem2093.github.io/react/
- https://github.com/sem2093/HarvardCS50/blob/main/README.md
-
-
+  <div class="projects">
+  <a href="https://sem2093.github.io/apiproject/"><button type="button" class="btn btn-primary btn-lg">API Projects</button></a>
+ <a href="https://sem2093.github.io/react/"><button type="button" class="btn btn-primary btn-lg">React.js Projects</button></a>
+<a href="https://github.com/sem2093/HarvardCS50/blob/main/README.md"><button type="button" class="btn btn-primary btn-lg">Harvard CS50 Course</button></a>
+  </div>
 </div>
     <!---------carousel controls---------->
    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" data-bs-theme="dark">
