--- a/index.html
+++ b/index.html
@@ -51,32 +51,35 @@
     </form>
   </div>
 </nav> 
-  </div>
+  
   <!---------end search navbar----------->
-  <!---------off canvas----------->
+  <!---------Projects----------->
       <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
  Coding Projects <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
   <path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
 </svg>
 </a>
-
+  </div>
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Coding Projects</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
     <div>
-      Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+    Here you can see projects I have worked on or am still working on. The links will take you to the live applications or to the GitHub repository. 
     </div>
     <div class="dropdown mt-3">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-        Dropdown button
+        Links <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+</svg>
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><a class="dropdown-item" href="https://sem2093.github.io/apiproject/">API Projects</a></li>
+        <li><a class="dropdown-item" href="https://sem2093.github.io/react/">React.js Projects</a></li>
+        <li><a class="dropdown-item" href="https://github.com/sem2093/HarvardCS50/blob/main/README.md">Harvard CS50 Course Work</a></li>
       </ul>
     </div>
   </div>
@@ -118,14 +121,6 @@
   </div>
   </div>
 </div>
-     <!---------carousel slide 5---------->
-<div class="carousel-item">
-  <div class="projects">
-  <a href="https://sem2093.github.io/apiproject/"><button type="button" class="btn btn-primary btn-lg">API Projects</button></a>
- <a href="https://sem2093.github.io/react/"><button type="button" class="btn btn-primary btn-lg">React.js Projects</button></a>
-<a href="https://github.com/sem2093/HarvardCS50/blob/main/README.md"><button type="button" class="btn btn-primary btn-lg">Harvard CS50 Course</button></a>
-  </div>
-</div>
     <!---------carousel controls---------->
    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev" data-bs-theme="dark">
     <span class="carousel-control-prev-icon"></span>
@@ -137,14 +132,7 @@
   </button>
    </div>    
 <!-------end of carousel---------->
-  
-  <!-------------certificates-------------->
- 
-  
-    
-  </main>
-  
-
+ </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="index.js"></script>
 </body>
