--- a/index.html
+++ b/index.html
@@ -18,29 +18,13 @@
   <main>
    <div id="carouselExample" class="carousel slide" data-bs-touch="false" data-bs-theme="dark">
      <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active indicator" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1"  class="indicator" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" class="indicator" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" class="indicator" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="4" class="indicator" aria-label="Slide 5"></button> 
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
     <!---------carousel slide 1-------->
     <div class="carousel-item active">
-         <div class="form">
-    <form class="username" id="username">
- <label for="username" class="form-label">GitHub Username</label>
-    <div class="input-group has-validation">
-      <span class="input-group-text" id="usernamePrepend">@</span>
-      <input type="text" class="form-control" id="username" >
-      </div>
-</form>
-      <button class="btn btn-primary" id="liveAlertBtn">Submit</button>
-    </div>
-        </div>
-       </div>
-    <!---------carousel slide 2 ----------->
-    <div class="carousel-item">
       <!---------search navbar----------->
       <div class="form">
       <nav class="navbar bg-body-tertiary search" id="search">
@@ -84,9 +68,21 @@
     </div>
   </div>
 </div>
-      <!---------off canvas end ----------->
+      <!---------Projects end ----------->
+      <!---------Github username form ----------->
+         <div class="form">
+    <form class="username" id="username">
+ <label for="username" class="form-label">GitHub Username</label>
+    <div class="input-group has-validation">
+      <span class="input-group-text" id="usernamePrepend">@</span>
+      <input type="text" class="form-control" id="username" >
+      </div>
+</form>
+      <button class="btn btn-primary" id="liveAlertBtn">Submit</button>
     </div>
-    <!---------carousel slide 3---------->
+      <!---------username request end----------->
+        </div>
+    <!---------carousel slide 2---------->
     <div class="carousel-item">
       <div class="icons">
   <button type="button" class="btn btn-outline-danger icon">Facebook<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -105,7 +101,7 @@
         
     </div>  
     </div>
-  <!---------carousel slide 4---------->
+  <!---------carousel slide 3---------->
 <div class="carousel-item">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
   <div id="certcon">
