--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://sem2093.github.io/portfolio/css/styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
-<body class="bg-secondary">
+<body>
  
   <div>
   <header>
@@ -100,7 +100,6 @@
     </div>
   <!---------carousel slide 3---------->
 <div class="carousel-item">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
   <div id="certcon">
   <img class="cert" src="certificates/13752387-208C-4A54-BA74-73E4CAB92CCD.jpeg">
   <img class="cert" src="certificates/25CC7C93-330E-4614-80EC-634FD932EC70.jpeg">
@@ -111,7 +110,6 @@
   <img class="certtall" src="certificates/1F8A93B3-1576-4439-9BB4-E355A1BCBE09.jpeg">
   <img class="certtall" src="certificates/BB86BC3B-486A-4C44-8C23-5ECEB2F69001.jpeg">
   <img class="certtall" src="certificates/DAF56264-87B6-4992-B6D2-3A7E2642CA11.jpeg">
-  </div>
   </div>
 </div>
     <!---------carousel controls---------->
