--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   </head>
 <body>
-  <main>
-      <!---------search navbar----------->
-      <div class="portfolio"
-      <nav class="navbar bg-body-tertiary search" id="search">
+  <heading>
+  <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
+    <a class="navbar-brand">Steven Miller Portfolio</a>
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
-</nav> 
-  
-  <!---------end search navbar----------->
+</nav>
+  </heading>
+  <main>
+      <!---------search navbar----------->
+      <div class="portfolio"
+      
   <!---------Projects----------->
       <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
  Coding Projects <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
